# rmg

./: .gitattributes  Cargo.toml  README.md  TODO.md  build.rs  build_web.zsh
.github/: linux-release.yml  windows-release.yml
.github/workflows/: gh-page.yml  github-pages.yml  linux-release.yml  linux.yml  mac.yml  release.yml  test-linux.yml  test-mac.yml  test-release.yml  test-windows.yml  test.yml  wasm.yml  windows-release.yml  windows.yml
assets/: config.rs
benches/: bench_main.rs
benches/benchmarks/: color.rs  math_arrmatrix.rs  mod.rs
ci/: build.bat  build.sh  build_linux.sh  build_linux_release.sh  build_mac.sh  build_windows.sh
docs/: BUG.md  README.md  TODO.md  usage.md
examples/: bbf.rs  color.rs  config.rs  fir.rs  font.rs  gcd.rs  heic.rs  io_uring.rs  list.rs  m.rs  m1.rs  meta.rs  minifb_rgba.rs  rename.rs  rgba.rs  size.rs  t.rs  thread.rs  thread2.rs
rmg-web/: .gitattributes  .gitignore  build.zsh
rmg-web/www/: index.html
rmg-web/www/css/: style.css
rmg-web/www/js/: main.js  net.js  worker.js
rmg-web/yiiy/: Cargo.toml  README.md
rmg-web/yiiy-web/: README.md  tsconfig.json
rmg-web/yiiy-web/src/: main.ts  net.ts  worker.ts
rmg-web/yiiy/src/: lib.rs
src/: app.rs  archive.rs  canvas.rs  config.rs  data.rs  frame.rs  img.rs  lib.rs  main.rs  render.rs  shape.rs  ui.rs  utils.rs  web.rs  window.rs
src/app/: buffer.rs  canvas.rs  draw.rs  gesture.rs  layout.rs  page.rs  state.rs  task.rs  view.rs  web.rs  window.rs
src/app/web/: pool.rs
src/archive/: dir.rs  file.rs  tar.rs  utils.rs  zip.rs  zstd.rs
src/canvas/: buffer.rs  gesture.rs  layout.rs  page.rs  state.rs  task.rs
src/cli/: parse.rs
src/color/: format.rs  rgb.rs  rgba.rs
src/config/: default_config.rs  history.rs  rsconf.rs
src/data/: config.rs  font.rs  notes.rs
src/files/: dir.rs  file.rs  list.rs
src/frame/: aseprite.rs  avif.rs  heic.rs  svg.rs
src/img/: ase.rs  avif.rs  bind.rs  covert.rs  gif.rs  heic.rs  resize.rs  size.rs  svg.rs  utils.rs
src/math/: arrmatrix.rs
src/metadata/: import.rs  meta.rs  tags.rs
src/reader/: buffer.rs  canvas.rs  display.rs  keymap.rs  mini.rs  once.rs  page.rs  scroll.rs  turn.rs  view.rs  window.rs
src/render/: display.rs  draw.rs  keymap.rs  layout.rs  mode.rs  once.rs  scroll.rs  turn.rs  utils.rs  view.rs  window.rs
src/shape/: circle.rs  rect.rs
src/ui/: align.rs  elem.rs  style.rs  tags.rs
src/utils/: affine.rs  cli.rs  err.rs  error.rs  file.rs  filter.rs  list.rs  macros.rs  size.rs  traits.rs  types.rs  vec2.rs
src/window/: desktop.rs  web.rs
tests/: 1.heic  nom-hex_to_rgb.rs  perf.zsh  test.sh
tests/anim/ase/: 00.ase  01.ase
tests/files/: .rmg  2.tar  config.rs  config.txt  img.tar  img_rgba.tar  img_rmg.tar  jpg.tar  png.czb  png.tar
tests/files/1/: 0.avif  0.heic
tests/files/ase/: 02.ase
tests/other/: config.rs  img.tar
www/: index.html
www/css/: style.css
www/js/: init.js  main.js  worker.js
www/wasm/: README.md  package.json  rmg.d.ts  rmg.js  rmg.wasm  rmg.wasm.d.ts
