[package]
name = "rmg"
edition = "2021"
version= "0.5.11"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = "Rust: Tiny And Fast Manga/Image Viewer"
homepage = "https://crates.io/crates/rmg"
repository = "https://github.com/rsuu/rmg"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["Multimedia::Images"]
keywords = ["manga", "comic", "viewer"]

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
strip = true

[profile.release.package."*"]
opt-level = 2
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
strip = true

[dependencies]
anyhow = "1.0.72"
infer = "0.15.0"      # filetype
lexopt = "0.3.0"      # cli
walkdir = "2.3.3"     # fs
dirs-next = "2.0.0"   # config
sysinfo = {version="0.29.5" ,default-features = false}

# log
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

#log = "0.4.17"
#env_logger = {version = "0.10.0", features = ["color"], default-features = false}

# image
fir = {version = "2.7.3", package = "fast_image_resize"}
asefile={version = "0.3.6",optional = true}
libheif-rs = {version = "0.20.0",optional = true}
gif = "0.12.0"
gif-dispose = "4.0.0"
image = {version="0.24.6", default-features = false }


# window
minifb={version = "0.24.0",default-features = false}

# config
syn={version = "1",features = ["parsing", "extra-traits", "full"],default-features = false}

# svg
tiny-skia={version = "0.11.1",optional = true}
usvg={version = "0.35.0",optional = true}
resvg={version = "0.35.0",optional = true}

# archive
zip ={version = "0.6.6",features = ["aes-crypto", "bzip2", "deflate"],optional = true,default-features = false}
tar ={version = "0.4.39",optional = true}

[features]
default = ["ex_zip", "ex_tar", "x11"]
full = ["ex_full", "de_full"]
ex_full = ["ex_tar", "ex_zip"]
de_full = ["de_heic", "de_ase", "de_svg"]
wayland= ["minifb/wayland", "minifb/dlopen"]
x11 = ["minifb/x11"]
web = ["minifb/web"]
de_ase = ["dep:asefile"]
de_heic = ["dep:libheif-rs"]
de_svg = ["dep:usvg", "dep:tiny-skia", "dep:resvg"]
ex_zip = ["dep:zip"]
ex_tar = ["dep:tar"]
sse4_1 = []
avx2 = []
