[package]
name = "rmg"
edition = "2021"
version = "0.6.0"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = "Rust: Tiny And Fast Manga/Image Viewer"
homepage = "https://crates.io/crates/rmg"
repository = "https://github.com/rsuu/rmg"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["Multimedia::Images"]
keywords = ["manga", "comic", "viewer"]
exclude = ["examples/", ".gitignore", ".github/", "tests/"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
strip = true

[profile.release.package."*"]
opt-level = 2
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
strip = true

[dependencies]
# filetype
infer = "0.15.0"

# cli
lexopt = "0.3.0"

# fs
walkdir = "2.4.0"

# config
dirs-next = "2.0.0"
sysinfo = { version = "0.30.3", default-features = false }

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.77"

# image
fir = { version = "2.7.3", package = "fast_image_resize" }
asefile = { version = "0.3.6", optional = true }
libheif-rs = { version = "0.20.0", optional = true } # heif/avif
gif = "0.12.0"
gif-dispose = "4.0.1"
image = { version = "0.24.7", default-features = false, features = [
  "jpeg",
  "png",
  # ?avif
] }
#ravif = "0.11.3" # rust avif

# window
minifb = { version = "0.25.0", default-features = false }

# config
esyn = "0.8.1"

# svg
tiny-skia = { version = "0.11.3", optional = true }
usvg = { version = "0.35.0", optional = true }
resvg = { version = "0.35.0", optional = true }

# archive
# well: workspace dependencies cannot be optional
zip = { version = "0.6.6", optional = true, default-features = false, features = [
  # "zstd", # NEVER
  "aes-crypto",
  "bzip2",
  "deflate",
] }
tar = { version = "0.4.40", optional = true }
#zstd = "0.13.0"
#unrar = "0.5.2"
#sevenz-rust = "0.5.3"

# web
console_error_panic_hook = {version="0.1.7",optional=true}
wasm-bindgen ={version= "0.2.89",optional=true}
web-sys ={version= "0.3.66",optional=true}
pico-args = "0.5.0"


[features]
default = ["ex_zip", "ex_tar", "minifb/x11", "minifb/wayland", "minifb/dlopen"]
full = ["ex_full", "de_full"]
arch_avx2 = []
arch_sse4_1 = []
de_full = ["de_heic", "de_ase", "de_svg"]
de_ase = ["dep:asefile"]
de_heic = ["dep:libheif-rs"]
#de_avif = []
de_svg = ["dep:usvg", "dep:tiny-skia", "dep:resvg"]
ex_full = ["ex_tar", "ex_zip"]
ex_tar = ["dep:tar"]
ex_zip = ["dep:zip"]
web = ["minifb/web","dep:console_error_panic_hook","dep:wasm-bindgen","dep:web-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
