[package]
name = "rmg"
edition = "2021"
version = "0.6.1"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = ""
homepage = "https://crates.io/crates/rmg"
repository = "https://github.com/rsuu/rmg"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = []
keywords = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
strip = true

#[profile.release.package."*"]
#opt-level = 2
#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#strip = true

# REFS: https://doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
# Making dependencies in release mode and only my crate in debug mode.
#[profile.dev.package."*"]
#opt-level = 2
#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#strip = true

[dependencies]
# window
winit = { version = "0.29.5", default-features = false, features = [
  "rwh_05",
  "rwh_06",
] }
softbuffer = { version = "0.4.1", default-features = false }

# image
image = { version = "0.25.1", default-features = false, features = [
  "png",
  "jpeg",
  "avif",
  "webp",
  "gif",
] }
fir = { version = "3.0.4", package = "fast_image_resize" }
rgb = { version = "0.8.37", features = ["argb"] }
infer = "0.15.0"
imagesize = "0.12.0"
# line_drawing = "1.0.0"
asefile = { version = "0.3.8", optional = true }
libheif-rs = { version = "1.0.0", optional = true }
# jxl-oxide = "0.8.0"
usvg = { version = "0.41.0", optional = true }
tiny-skia = { version = "0.11.4", optional = true }
resvg = { version = "0.41.0", optional = true, default-features = false, features = [
  "text",
  "system-fonts",
] }

# archive
tar = { version = "0.4.40", default-features = false, optional = true }
zip = { version = "0.6.6", default-features = false, features = [
  "deflate",
] }

# config
dirs-next = "2.0.0"
esyn = "0.9.0"

# thread
rayon = "1.10.0"

# cli
pico-args = "0.5.0"

# log
#minitrace = "0.6.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
eyre = { version = "0.6.12", default-features = false, features = [
  "track-caller",
  "auto-install",
] }

# math
gcd = "2.3.0"

# gesture
guessture = "0.1.0"

# io
walkdir = "2.5.0"

# text
# fontdue = "0.9.0"

[features]
default = []
full = ["ex_full", "de_full"]
win_wayland = ["winit/wayland", "softbuffer/wayland"]
win_x11 = ["winit/x11", "softbuffer/x11"]
arch_avx2 = []
arch_sse4_1 = []
de_full = ["de_heic", "de_aseprite", "de_svg"]
de_aseprite = ["dep:asefile"]
de_heic = ["dep:libheif-rs"]
de_svg = ["dep:usvg", "dep:tiny-skia", "dep:resvg"]
ex_full = ["ex_tar"]
ex_tar = ["dep:tar"]

[target.'cfg(target_family = "wasm")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.7"
#wasm-bindgen-futures = "0.4.30"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }

# [target.'cfg(target_family = "wasm")'.features]
# default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
