[package]
name = "yiiy"
edition = "2021"
version = "0.1.0"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = ""
homepage = "https://crates.io/crates/yiiy"
repository = "https://github.com/rsuu/yiiy"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = []
keywords = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
strip = true

#[profile.release.package."*"]
#opt-level = 2
#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#strip = true

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = [
  'console',
  'Document',
  'HtmlElement',
  'HtmlImageElement',
  'Blob',
  'Url',
  'MessageEvent',
  'Window',
  'Worker',
  'Performance', 'PerformanceTiming'
] }
tar = "0.4.40"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
js-sys = "0.3.66"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
